--- a/part5/bloglist-frontend-main/package.json
+++ b/part5/bloglist-frontend-main/package.json
@@ -2,13 +2,14 @@
   "name": "bloglist-frontend",
   "private": true,
   "version": "0.0.0",
-  "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
     "preview": "vite preview",
-    "test": "vitest run"
+    "test": "NODE_ENV=test playwright test",
+    "test:report": "NODE_ENV=test playwright show-report",
+    "test:ui": "NODE_ENV=test playwright test --ui"
   },
   "dependencies": {
     "axios": "^1.4.0",
@@ -18,9 +19,11 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.20.0",
+    "@playwright/test": "^1.50.1",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.2.0",
     "@testing-library/user-event": "^14.6.1",
+    "@types/node": "^22.13.5",
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.7",
     "@vitejs/plugin-react": "^4.0.3",
