--- a/part6/query-anecdotes/package.json
+++ b/part6/query-anecdotes/package.json
@@ -11,10 +11,12 @@
     "server": "node server.js"
   },
   "dependencies": {
+    "@tanstack/react-query": "^5.68.0",
     "axios": "^1.4.0",
     "json-server": "^0.17.4",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "tanstack": "^1.0.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
