--- a/part7/bloglist/frontend/package.json
+++ b/part7/bloglist/frontend/package.json
@@ -12,10 +12,12 @@
     "test:ui": "NODE_ENV=test playwright test --ui"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^2.6.1",
     "axios": "^1.4.0",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-redux": "^9.2.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.20.0",
